force-app/main/default/objects/DSALES_Endoso__c/DSALES_Endoso__c.object-meta.xml
<CustomObject>
    <label>Endoso</label>
    <nameField>
        <displayFormat>END-{0000000}</displayFormat>
        <label>Número de Endoso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Endosos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>