force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_MontoaDevolver__c.field-meta.xml
<CustomField>
    <fullName>DSALES_MontoaDevolver__c</fullName>
    <description>Campo para recibir el moto a devolver que retornaría el proveedor por cancelar la póliza</description>
    <label>Monto a devolver</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>