force-app/main/default/objects/DSALES_Endoso__c/fields/dsalesFechaCreacion__c.field-meta.xml
<CustomField>
    <fullName>dsalesFechaCreacion__c</fullName>
    <description>Campo para registra la fecha en que nación el endoso en los sistemas externos</description>
    <label>Fecha de creación</label>
    <type>Date</type>
</CustomField>