force-app/main/default/objects/DSALES_Endoso__c/recordTypes/dsalesRegistroEndosoSC.recordType-meta.xml
<RecordType>
    <fullName>dsalesRegistroEndosoSC</fullName>
    <active>true</active>
    <description>Registro de endoso de seguro celurar</description>
    <label>Registro de Endoso SC</label>
</RecordType>