force-app/main/default/objects/DSALES_Endoso__c/recordTypes/Registro_de_endoso.recordType-meta.xml
<RecordType>
    <fullName>Registro_de_endoso</fullName>
    <active>true</active>
    <description>Tipo de registro para el registro del cliente con campos específicos</description>
    <label>Registro de endoso</label>
</RecordType>