force-app/main/default/objects/DSALES_Endoso__c/recordTypes/Registro_de_endoso_completo.recordType-meta.xml
<RecordType>
    <fullName>Registro_de_endoso_completo</fullName>
    <active>true</active>
    <description>Tipo de registro para visualizar todos los valores</description>
    <label>Registro de endoso completo</label>
</RecordType>