force-app/main/default/objects/DSALES_Endoso__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DSALES_Cliente__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DSALES_Estatus__c</columns>
    <columns>DSALES_Poliza__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>DSALES_Dosdiassinupdate__c</columns>
    <columns>DSALES_Enviadoaproveedor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los endosos</label>
</ListView>